--- a/src/components/Rectangle/Rectangle.css
+++ b/src/components/Rectangle/Rectangle.css
@@ -5,3 +5,10 @@
     margin: 0px;
     border-bottom: 1px solid black;
   }
+  div{
+
+  padding-right: 5px;
+  }
+ div ul{
+    padding-left: 0px;
+  }
