--- a/src/components/Rectangle/Rectangle.css
+++ b/src/components/Rectangle/Rectangle.css
@@ -5,6 +5,12 @@
     margin: 0px;
     border-bottom: 1px solid black;
   }
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
   div{
 
   padding-right: 5px;
@@ -12,3 +18,64 @@
  div ul{
     padding-left: 0px;
   }
+
+  .button4 {
+
+    display: inline-block;
+    padding:0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border: 0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#b97272;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align:center;
+    transition: all 0.2s;
+  }
+.button4:hover{
+  border-color: rgba(255,255,255,1);
+}
+
+#input{
+  margin-top: 50px;
+}
+.form__label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.2rem;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s;
+  transform: translateY(0rem);
+}
+
+.form__input {
+  font-family: 'Roboto', sans-serif;
+  color: #333;
+  font-size: 1.2rem;
+	margin: 0 auto;
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black ;
+  width: 90%;
+  display: block;
+  transition: all 0.3s;
+}
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translateY(-4rem);
+  transform: translateY(-4rem);
+}
+@media all and (max-width:30em){
+
+  .button4{
+    display: block;
+    margin: 0.2em auto;
+  }
+}
