--- a/src/Pages/LinkedList/LinkedList.css
+++ b/src/Pages/LinkedList/LinkedList.css
@@ -14,17 +14,26 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
   }
   
   .shape {
       height: 75px;
-      width: 100px;
+      width: 125px;
       background-color: #0074d9;
       border-radius: 5px;
       margin-bottom: 30px;
+      margin-right: 10px;
       float: left;
       padding-top: 0px;
-      margin-right: 10px;
+
+    }
+    .remove{
+
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+      
     }
 #pointer {
     width: 150px;
@@ -59,5 +68,7 @@
 
     border:1px solid black;
     height: 60px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
