--- a/src/Pages/Array/ArrayStructure.css
+++ b/src/Pages/Array/ArrayStructure.css
@@ -35,6 +35,7 @@
   margin-bottom: 2rem;
   display: block;
   transition: all 0.3s;
+  text-decoration: underline;
   transform: translateY(0rem);
 }
 
