--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 nav {
     font-size: 2rem;
-    background-color: #f1f1f1;
+    background-image: linear-gradient(rgba(179, 104, 104, 0.931), yellow);
 }
 nav ul {
     list-style-type: none;
@@ -9,7 +9,9 @@ nav ul {
     display: flex;
     /* justify-content: space-around; */
 }
-
+.link{
+    color: black;
+}
 nav ul li {
     cursor: pointer;
     padding: 0.5rem;
@@ -18,7 +20,7 @@ nav ul li {
 }
 
 nav ul li:hover {
-    background-color: #555;
+    background-color: rgb(238, 153, 153);
     color: white;
 }
 .home  {
@@ -29,7 +31,7 @@ nav ul li:hover {
    
 }
 #link:hover {
-    background-color: #555;
+    background-color: rgb(238, 153, 153);
     color: white;
 }
 
