--- a/src/components/Rectangle/Rectangle.css
+++ b/src/components/Rectangle/Rectangle.css
@@ -5,6 +5,13 @@
     margin: 0px;
     border-bottom: 1px solid black;
     border-radius: 5px;
+    transition: width 2s, height 2s, transform 2s; 
+  }
+
+  .rectangle:hover{
+    width: 150px;
+    height: 150px;
+    transform: rotate(360deg);
   }
   .container {
     display: flex;
