--- a/src/Pages/Stack/Stack.css
+++ b/src/Pages/Stack/Stack.css
@@ -23,22 +23,23 @@ form{
  }
 .button4 {
 
-    display: inline-block;
-    padding:0.3em 1.2em;
-    margin:0 0.1em 0.1em 0;
-    border: 0.16em solid rgba(255,255,255,0);
-    border-radius:2em;
-    box-sizing: border-box;
-    text-decoration:none;
-    font-family:'Roboto',sans-serif;
-    font-weight:300;
-    color:#b97272;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-    text-align:center;
-    transition: all 0.2s;
+  padding: 15px 25px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: whitesmoke;
+  border: none;
+  border-radius: 15px;
   }
-.button4:hover{
-  border-color: rgba(255,255,255,1);
+
+
+.button4:hover { background-color: #44151ced;}
+
+.button4:active {
+  background-color: #f11637ed;
+  transform: translateY(4px);
 }
 
 #input{
