--- a/src/Pages/Stack/Stack.css
+++ b/src/Pages/Stack/Stack.css
@@ -8,9 +8,6 @@
     text-align: center;
     margin-top: 100px;
 }
-form{
-    margin-top: 10px;
-}
 .message{
     background-color: tomato;
     color: white;
@@ -28,7 +25,7 @@ form{
   text-align: center;
   cursor: pointer;
   outline: none;
-  color: #fff;
+  color: rgb(163, 108, 108);
   background-color: whitesmoke;
   border: none;
   border-radius: 15px;
@@ -45,6 +42,9 @@ form{
 #input{
   margin-top: 50px;
 }
+input{
+  width: 50% !important;
+}
 .form__label {
   font-family: monospace;
   font-size: 3.0rem;
@@ -58,16 +58,17 @@ form{
 
 .form__input {
   font-family: 'Roboto', sans-serif;
-  color: #333;
+  color: rgb(248, 246, 246) !important;
   font-size: 1.2rem;
   margin: 0 auto;
   padding: 1.5rem 2rem;
   border-radius: 0.2rem;
-  background-color: rgb(253, 253, 253);
+  background-color: rgb(243, 47, 47) !important;
   border: 1px solid black ;
   width: 90%;
   display: block;
   transition: all 0.3s;
+
 }
 
 .form__input:placeholder-shown + .form__label {
@@ -75,6 +76,7 @@ form{
   visibility: hidden;
   -webkit-transform: translateY(-4rem);
   transform: translateY(-4rem);
+  color: rgb(248, 246, 246) !important;
 }
 @media all and (max-width:30em){
 
