adding new style

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body{
     height: 100%;
     margin: 0;
     padding: 0;
-    background: url("./img/coding.jpg")
+    background: url("./img/keyboard.jpg")
       no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
