--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -5,7 +5,7 @@
     flex-direction: column;
 }
 .intro{
-    color:blue;
+    color:white;
     font-size: 20px;
     box-shadow: 5px 4px 7px 10px #020201;
     margin-left: 30px;
@@ -13,6 +13,7 @@
 }
 p{
     margin-left: 30px;
+    color:white;
 }
 h3{
     text-decoration: underline;
@@ -21,7 +22,8 @@ h3{
 }
 h1{
     text-decoration: underline;
-    color: rgb(89, 79, 221);
+    color: rgba(236, 243, 246, 0.835);
+    font-size: 40px;
 }
 
 @font-face {
