--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,6 @@
 nav {
     font-size: 2rem;
-    background-image: linear-gradient(rgba(179, 104, 104, 0.931), yellow);
+    /* background-image: linear-gradient(rgba(179, 104, 104, 0.931), yellow); */
 }
 nav ul {
     list-style-type: none;
@@ -10,7 +10,7 @@ nav ul {
     /* justify-content: space-around; */
 }
 .link{
-    color: black;
+    color:white;
 }
 nav ul li {
     cursor: pointer;
